--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,94 +4,94 @@
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD5iNsF7LPnytD6fh4wVe7e3ow0udj27Ms</string>
 
     <string-array name="items">
-        <item>pepsi,20</item>
-        <item>coke,20</item>
-        <item>marida,20</item>
-        <item>fenta,20</item>
-        <item>sting,25</item>
+        <item>Pepsi,20</item>
+        <item>Coke,20</item>
+        <item>Marida,20</item>
+        <item>Fenta,20</item>
+        <item>Sting,25</item>
         <item>7up,20</item>
-        <item>bonus,10</item>
-        <item>surf xcel,20</item>
-        <item>lux,30</item>
-        <item>tibat,25</item>
-        <item>dalda,440</item>
-        <item>shan,640</item>
-        <item>nisan,345</item>
-        <item>blue band,720</item>
-        <item>knorr,620</item>
-        <item>closeup,230</item>
-        <item>dove,240</item>
-        <item>lifebouy,820</item>
-        <item>lipton,720</item>
-        <item>magnum,620</item>
-        <item>pepsodent,520</item>
-        <item>ponds,520</item>
-        <item>sunsilk,420</item>
-        <item>domex,220</item>
-        <item>fari &amp; lovely,520</item>
-        <item>fruttare,240</item>
-        <item>rin,2210</item>
-        <item>kitchen,520</item>
-        <item>home door,220</item>
-        <item>bedding,520</item>
-        <item>furniture,420</item>
-        <item>storage,220</item>
-        <item>smartphone,220</item>
-        <item>bluetooth,720</item>
-        <item>accessories,230</item>
-        <item>tablets,820</item>
-        <item>earphones,620</item>
-        <item>selfie sticks,820</item>
-        <item>t-shirt,260</item>
-        <item>watches,520</item>
-        <item>shoes,820</item>
-        <item>pents,240</item>
-        <item>trousers,920</item>
-        <item>shorts,820</item>
-        <item>traditional war,320</item>
-        <item>innerwear,620</item>
-        <item>unstitched,320</item>
-        <item>kurtas,620</item>
-        <item>twellery,320</item>
-        <item>nightwear,420</item>
-        <item>western,620</item>
-        <item>bras,420</item>
-        <item>bags,420</item>
-        <item>makeup,250</item>
-        <item>hair care,320</item>
-        <item>fragrances,620</item>
-        <item>skin care,720</item>
-        <item>bath &amp; body,240</item>
-        <item>personal care,250</item>
-        <item>health care,205</item>
-        <item>men grooming,240</item>
-        <item>large appliances,260</item>
-        <item>small appliences,280</item>
-        <item>cooling &amp; heating,270</item>
-        <item>waster drayers,270</item>
-        <item>generator,260</item>
-        <item>refrigerator,2650</item>
-        <item>freezer,280</item>
-        <item>mixing machine,240</item>
-        <item>small cooking appliences,250</item>
-        <item>water dispenser,2550</item>
-        <item>ironing,203</item>
-        <item>laundery,205</item>
-        <item>computing,240</item>
-        <item>gaming,250</item>
-        <item>laptops,10000</item>
-        <item>printers,2050</item>
-        <item>hard drives,550</item>
-        <item>rams,20</item>
-        <item>consoles,20</item>
-        <item>video games,10</item>
-        <item>gaming accesories,20</item>
-        <item>tv and videos,40</item>
-        <item>audio,60</item>
-        <item>camera,1000</item>
-        <item>televesion,2000</item>
-        <item>remote,40</item>
-        <item>headphones,50</item>
+        <item>Bonus,10</item>
+        <item>Surf xcel,20</item>
+        <item>Lux,30</item>
+        <item>Tibat,25</item>
+        <item>Dalda,440</item>
+        <item>Shan,640</item>
+        <item>Nisan,345</item>
+        <item>Blue band,720</item>
+        <item>Knorr,620</item>
+        <item>Closeup,230</item>
+        <item>Dove,240</item>
+        <item>Lifebouy,820</item>
+        <item>Lipton,720</item>
+        <item>Magnum,620</item>
+        <item>Pepsodent,520</item>
+        <item>Ponds,520</item>
+        <item>Sunsilk,420</item>
+        <item>Domex,220</item>
+        <item>Fari &amp; lovely,520</item>
+        <item>Fruttare,240</item>
+        <item>Rin,2210</item>
+        <item>Kitchen,520</item>
+        <item>Home door,220</item>
+        <item>Bedding,520</item>
+        <item>Furniture,420</item>
+        <item>Storage,220</item>
+        <item>Smartphone,220</item>
+        <item>Bluetooth,720</item>
+        <item>Accessories,230</item>
+        <item>Tablets,820</item>
+        <item>Earphones,620</item>
+        <item>Selfie sticks,820</item>
+        <item>T-Shirt,260</item>
+        <item>Watches,520</item>
+        <item>Shoes,820</item>
+        <item>Pents,240</item>
+        <item>Trousers,920</item>
+        <item>Shorts,820</item>
+        <item>Traditional war,320</item>
+        <item>Innerwear,620</item>
+        <item>Unstitched,320</item>
+        <item>Kurtas,620</item>
+        <item>Twellery,320</item>
+        <item>Nightwear,420</item>
+        <item>Western,620</item>
+        <item>Bras,420</item>
+        <item>Bags,420</item>
+        <item>Makeup,250</item>
+        <item>Hair care,320</item>
+        <item>Fragrances,620</item>
+        <item>Skin care,720</item>
+        <item>Bath &amp; body,240</item>
+        <item>Personal care,250</item>
+        <item>Health care,205</item>
+        <item>Men grooming,240</item>
+        <item>Large appliances,260</item>
+        <item>Small appliences,280</item>
+        <item>Cooling &amp; heating,270</item>
+        <item>Waster drayers,270</item>
+        <item>Generator,260</item>
+        <item>Refrigerator,2650</item>
+        <item>Freezer,280</item>
+        <item>Mixing machine,240</item>
+        <item>Small cooking appliences,250</item>
+        <item>Water dispenser,2550</item>
+        <item>Ironing,203</item>
+        <item>Laundery,205</item>
+        <item>Computing,240</item>
+        <item>Gaming,250</item>
+        <item>Laptops,10000</item>
+        <item>Printers,2050</item>
+        <item>Hard drives,550</item>
+        <item>Rams,20</item>
+        <item>Consoles,20</item>
+        <item>Video games,10</item>
+        <item>Gaming accesories,20</item>
+        <item>Tv and videos,40</item>
+        <item>Audio,60</item>
+        <item>Camera,1000</item>
+        <item>Televesion,2000</item>
+        <item>Remote,40</item>
+        <item>Headphones,50</item>
 
     </string-array>
 </resources>
