--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">iWSM</string>
+    <string name="app_name">iWFM</string>
 
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD5iNsF7LPnytD6fh4wVe7e3ow0udj27Ms</string>
 
@@ -94,4 +94,7 @@
         <item>Headphones,50</item>
 
     </string-array>
+
+    <string name="user_profile_photo">http://baobaoloveyou.com/flowingdrawer_icon.png</string>
+
 </resources>
